--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "dotfiles"]
-	path = dotfiles
-	url = https://github.com/AlexanderRDiaz/dotfiles
+[submodule ".files"]
+	path = .files
+	url = https://github.com/AlexanderRDiaz/.files
 	branch = main
