2021 types + 2022 & 2023 solutions + extras refactor

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ pycodestyle = { max-doc-length = 120, max-line-length = 120 }
 flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
 isort = { length-sort = true, combine-as-imports = true, from-first = true, lines-between-types = 2, lines-after-imports = 2 }
 flake8-builtins = { strict-checking = true }
+pylint = { max-statements = 100 }
 
 [tool.ruff.format]
 indent-style = "space"
